--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,36 @@ th,td {
 }
 
 h1,h2,h3,h4,h5 {
-  margin: 16px 0px 16px 0px;
-  font-weight:700 !important;
+  margin-bottom:16px;
+  font-weight:500 !important;
   color: #000000;
 }
 
+h1.jumbo, h1.hero {
+  margin-bottom: 48px;
+}
+
 p {margin-bottom:24px;}
+h1.jumbo {font-size: 46px !important; line-height: 48px !important; }
+h1.hero {font-size: 41px !important; line-height: 44px !important; }
+h1 {font-size: 36px !important; line-height: 40px !important;  }
+h2 {font-size: 29px !important; line-height: 36px !important;  }
+h3 {font-size: 23px !important; line-height: 32px !important;  }
+h4 {font-size: 20px !important; line-height: 28px !important;  }
+h5 {font-size: 18px !important; line-height: 24px !important;  }
+
+
+
+.lg-body {font-size: 20px !important; line-height: 28px !important;  }
+p {font-size: 18px !important; line-height: 24px !important; color:#333333; }
+.sm-body {font-size: 16px !important; line-height: 24px !important;  }
+.lg-caption {font-size: 14px !important; line-height: 20px !important;  }
+.caption {font-size: 13px !important; line-height: 20px !important;  }
+.xs-caption {font-size: 11px !important; line-height: 16px !important;  }
+
+span {font-size: 1rem;}
+
+/* p {margin-bottom:24px;}
 h1.jumbo {font-size: 46px !important; line-height: 1.25 !important; }
 h1.hero {font-size: 41px !important; line-height: 1.25 !important; }
 h1 {font-size: 36px !important; line-height: 1.25 !important;  }
@@ -43,6 +67,4 @@ p {font-size: 18px !important; line-height: 1.5 !important; color:#333333; }
 .sm-body {font-size: 16px !important; line-height: 1.5 !important;  }
 .lg-caption {font-size: 14px !important; line-height: 1.5 !important;  }
 .caption {font-size: 13px !important; line-height: 1.5 !important;  }
-.xs-caption {font-size: 11px !important; line-height: 1.5 !important;  }
-
-span {font-size: 1rem;}
+.xs-caption {font-size: 11px !important; line-height: 1.5 !important;  } */
